First hyperparameter tuning done

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ evaluation_models/hierdec-mel_16bar.tar
 utilities/iou_scores
 datasets.zip
 evaluation_models/compose.zip
+run\two_datasets_attention\optimisation\results.txt
