--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@ utilities/iou_scores
 datasets.zip
 evaluation_models/compose.zip
 run\two_datasets_attention\optimisation\results.txt
+utilities/nohup.out
