--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,6 @@ datasets.zip
 evaluation_models/compose.zip
 run\two_datasets_attention\optimisation\results.txt
 utilities/nohup.out
+
+utilities/midi_to_mp3/utilities/example/wav/billie_jean.wav
+utilities/midi_to_mp3/ffmpeg.exe
