Update requirements.txt and README.md

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ utilities/nohup.out
 
 utilities/midi_to_mp3/utilities/example/wav/billie_jean.wav
 utilities/midi_to_mp3/ffmpeg.exe
+datasets.rar
