--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-codetiming==1.3.0
-keras==2.4.3
-matplotlib==3.3.4
-music21==6.7.1
-note_seq==0.0.2
+codetiming
+keras
+matplotlib
+music21
+note_seq
 numpy
-scikit_learn==0.24.1
-tensorboard==2.4.1
-tensorflow==2.4.1
-tqdm==4.58.0
+scikit_learn
+tensorboard
+tensorflow
+tqdm
